--- a/content/resources/18-01f20.md
+++ b/content/resources/18-01f20.md
@@ -3,7 +3,8 @@ body: ''
 content_type: resource
 description: ''
 draft: true
-file: /courses/cherlizabeth-test-site/18-01f20.jpg
+file: /ol-ocw-studio-app/courses/cherlizabeth-test-site/18-01f20.jpg
+file_size: 44104
 file_type: image/jpeg
 image_metadata:
   caption: A proof of some math rule. (Image by MIT OpenCourseWare)
