Sync all content

--- a/content/resources/18-01f20-th.md
+++ b/content/resources/18-01f20-th.md
@@ -3,7 +3,8 @@ body: ''
 content_type: resource
 description: ''
 draft: true
-file: /courses/cherlizabeth-test-site/18-01f20-th.jpg
+file: /ol-ocw-studio-app/courses/cherlizabeth-test-site/18-01f20-th.jpg
+file_size: 31486
 file_type: image/jpeg
 image_metadata:
   caption: ''
